<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentGoodNewsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragments.GoodNewsFragment" >

    <Button
        android:id="@+id/goodNewsBtnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_radius"
        android:backgroundTint="@color/button"
        android:text="@string/home_button"
        android:textColor="@color/primary"
        android:textColorLink="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <ImageButton
        android:id="@+id/goodNewsBtnCategory"
        android:layout_width="77dp"
        android:layout_height="65dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        app:srcCompat="@drawable/categorybutton" />

    <TextView
        android:id="@+id/goodNewsTxtGoodNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/goodNews_text"
        android:textColor="@color/secondary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/goodNewsVideoView"
        android:layout_width="407dp"
        android:layout_height="267dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

    <ImageView
        android:id="@+id/goodNewsImgLogo1"
        android:layout_width="110dp"
        android:layout_height="85dp"
        android:src="@drawable/logo_bergenopzoom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <ImageView
        android:id="@+id/goodNewsImgLogo2"
        android:layout_width="110dp"
        android:layout_height="85dp"
        android:src="@drawable/logo_bergenopzoom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <ImageView
        android:id="@+id/goodNewsImgPeperbus"
        android:layout_width="171dp"
        android:layout_height="154dp"
        android:scaleType="centerInside"
        android:src="@drawable/peperbus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/goodNewsTxtBergenOpZoom"
        android:layout_width="380dp"
        android:layout_height="132dp"
        android:text="@string/bergenOpZoom_text"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goodNewsVideoView"
        app:layout_constraintVertical_bias="0.032" />

    <com.mapbox.maps.MapView
        android:id="@+id/goodNewsMapView"
        android:layout_width="190dp"
        android:layout_height="183dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        app:mapbox_cameraTargetLat="51.495"
        app:mapbox_cameraTargetLng="4.29167"
        app:mapbox_cameraZoom="12.0"
        app:mapbox_cameraPitch="0.0"
        app:mapbox_cameraBearing="0.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

